--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fileify",
+  "name": "file2ify",
   "version": "1.0.0",
   "description": "in browserify, you can require html,json,css files,and return string or json.",
   "main": "index.js",
@@ -12,6 +12,7 @@
     "html",
     "json",
     "css",
+    "file",
     "browserify",
     "gulp"
   ],
